# gslides-rs

./: .env.example  .gitignore  Cargo.toml  README.md  base_extracted.md  base_presentation.json  changed_extracted.md  changed_presentation.json  deserialization_error.json  extracted_text.md  presentation_diff.diff  svg.diff
examples/: debug_outline.rs  debug_shape_props.rs  diff_presentation.rs  fetch_presentation.rs  svg_presentation.rs
src/: client.rs  errors.rs  lib.rs
src/converters/: markdown.rs  mod.rs  svg.diff  svg.rs
src/converters/svg/: constants.rs  elements.rs  error.rs  mod.rs  structure.rs  text.rs  utils.rs
src/diff/: comparer.rs  error.rs  formatting.rs  markdown.rs  mod.rs  structured.rs  svg_diff.rs
src/models/: bullet.rs  colors.rs  common.rs  elements.rs  font.rs  group.rs  image.rs  image_properties.rs  line.rs  link.rs  list.rs  mod.rs  page.rs  page_properties.rs  picture.rs  placeholder.rs  presentation.rs  properties.rs  shape.rs  shape_properties.rs  sheets_chart.rs  speaker_spotlight.rs  table.rs  table_properties.rs  text.rs  text_element.rs  video.rs  wordart.rs
