[package]
name = "gslides_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
dotenvy = "0.15"
yup-oauth2 = "12.1.0"
