[package]
name = "gslides_rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = {version = "2.9.0", features = ["serde"]}
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
log = "0.4"

# features
treediff = { version= "5.0.0", optional = true, features = ["with-serde-json"] }
similar = { version = "2.7.0", features = ["inline"] }
anyhow = "1.0.98"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"

[features]
default = ["diff"]
diff = ["dep:treediff"]
yup-oauth2 = ["dep:yup-oauth2"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yup-oauth2 = { version = "12.1.0", optional = true }
